import "Enums/TripSpeedSourceProto.proto";

message EventHeader {
	// Protocol buffer template id
	required uint32 TemplateId = 1;

	// Unit identifier
	optional string UnitId = 2;

	// Event description
	optional string Description = 3;

	// Seconds since 1970.01.01
	optional uint64 UtcTimestampSeconds = 4;

	// Degrees -90...90
	optional double Latitude = 5;

	// Degrees -180...180
	optional double Longitude = 6;

	// Km/h
	optional uint32 Speed = 7;

	// Degrees 0..360
	optional uint32 Direction = 8;

	// Kilometers
	optional uint32 Odometer = 9;

	// Bitmask
	optional uint32 InputStatus = 10;

	// Bitmask
	optional uint32 OutputStatus = 11;

	// Driver identifier
	optional uint32 DriverKeyCode = 12;

	// Not used for incoming events
	optional uint32 Source = 13;

    // General Status flags (Use GeneralStatusType enum to check which flags have been set)
    optional uint32 GeneralStatus = 14;

   // Trip speed source
   optional TripSpeedSource TripSpeedSource = 17 [default = TRIP_SPEED_SOURCE_NOT_SUPPORTED];
}
