import "EventHeaderProto.proto";

// Periodic Position
message PeriodicPosition {
	required EventHeader header = 1;
	
	// Engine revolutions per minute (r/min). Precision: 100
	optional uint32 rpm = 2;

	// Trip duration in seconds
	optional uint32 trip_duration_seconds = 3;

	// Trip distance in meters
	optional uint32 trip_distance_meters = 4;
}
